--- a/config/DynCalculator.properties
+++ b/config/DynCalculator.properties
@@ -11,3 +11,5 @@ PORT	23657
 -	dynNet.operationsImpl.SubtractionOperation
 *	dynNet.operationsImpl.MultiplicationOperation
 /	dynNet.operationsImpl.DivisionOperation
+r   dynNet.operationsImpl.RootOperation
+l   dynNet.operationsImpl.LogOperation
